feat: Update route to use new controller
