# docs/swagger.yaml
@@ -9,32 +9,78 @@ definitions:
     type: object
   models.EspBase:
     properties:
+      created_at:
+        type: string
+      deleted_at:
+        type: string
       device_status:
         type: string
+      internal_id:
+        type: integer
       mac_address:
         type: string
       public_id:
         type: string
-    type: object
-  models.KomporRequestBody:
-    properties:
-      komporName:
+      updated_at:
         type: string
+      user_id:
+        type: integer
+    type: object
+  models.KomporBase:
+    properties:
+      created_at:
+        type: string
+      deleted_at:
+        type: string
+      internal_id:
+        type: integer
+      kompor_name:
+        type: string
+      public_id:
+        type: string
+      updated_at:
+        type: string
+      user_id:
+        type: integer
+    type: object
+  models.KomporRequest:
+    properties:
+      kompor_name:
+        type: string
+    required:
+    - kompor_name
     type: object
   models.UserDataResponse:
     properties:
       email:
         type: string
-      name:
+      role:
+        type: string
+      username:
+        type: string
+    type: object
+  models.UserGorm:
+    properties:
+      created_at:
+        type: string
+      email:
+        type: string
+      internal_id:
+        type: integer
+      public_id:
         type: string
       role:
+        type: string
+      updated_at:
+        type: string
+      username:
         type: string
     type: object
   models.UserLoginResponse:
     properties:
-      name:
-        type: string
       token:
+        type: string
+      username:
         type: string
     type: object
   utils.Response:
@@ -68,8 +114,7 @@ info:
 paths:
   /api/v1/esps:
     get:
-      description: Endpoint untuk mengambil daftar esps pengguna menggunakan email
-        pengguna
+      description: Endpoint untuk mengambil daftar esps pengguna
       produces:
       - application/json
       responses:
@@ -123,13 +168,41 @@ paths:
       summary: CreateEsp
       tags:
       - Esps
-  /api/v1/esps/{esp_pub_id}:
-    get:
-      description: Endpoint untuk mengambil detail esps menggunakan uuid esp
+  /api/v1/esps/{public_id}:
+    delete:
+      description: Endpoint untuk menghapus esp menggunakan public id
       parameters:
-      - description: Public Id ESP
+      - description: Public ID ESP
         in: path
-        name: esp_pub_id
+        name: public_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/utils.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/utils.Response'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/utils.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: DeleteEsp
+      tags:
+      - Esps
+    get:
+      description: Endpoint untuk mengambil detail esp menggunakan public id
+      parameters:
+      - description: Public ID ESP
+        in: path
+        name: public_id
         required: true
         type: string
       produces:
@@ -139,17 +212,17 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/models.EspBase'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/utils.Response'
         "404":
           description: Not Found
           schema:
             $ref: '#/definitions/utils.Response'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/utils.Response'
       security:
       - ApiKeyAuth: []
-      summary: GetEspDetail
+      summary: GetEspByPublicID
       tags:
       - Esps
   /api/v1/kompors:
@@ -162,7 +235,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/models.KomporRequestBody'
+              $ref: '#/definitions/models.KomporBase'
             type: array
         "400":
           description: Bad Request
@@ -183,14 +256,14 @@ paths:
         name: kompor
         required: true
         schema:
-          $ref: '#/definitions/models.KomporRequestBody'
+          $ref: '#/definitions/models.KomporRequest'
       produces:
       - application/json
       responses:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/models.KomporRequestBody'
+            $ref: '#/definitions/models.KomporBase'
         "400":
           description: Bad Request
           schema:
@@ -198,6 +271,63 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: AddKompor
+      tags:
+      - Kompors
+  /api/v1/kompors/{public_id}:
+    delete:
+      description: Menghapus kompor berdasarkan public id
+      parameters:
+      - description: Public ID Kompor
+        in: path
+        name: public_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/utils.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/utils.Response'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/utils.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: DeleteKompor
+      tags:
+      - Kompors
+    get:
+      description: Mengambil detail kompor berdasarkan public id
+      parameters:
+      - description: Public ID Kompor
+        in: path
+        name: public_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.KomporBase'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/utils.Response'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/utils.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: GetKomporByPublicID
       tags:
       - Kompors
   /v1/auth/login:
@@ -211,7 +341,7 @@ paths:
         name: user
         required: true
         schema:
-          $ref: '#/definitions/models.UserDataResponse'
+          $ref: '#/definitions/models.UserGorm'
       produces:
       - application/json
       responses:
@@ -225,7 +355,7 @@ paths:
             $ref: '#/definitions/utils.Response'
       summary: Login user
       tags:
-      - User
+      - Users
   /v1/auth/register:
     post:
       consumes:
@@ -237,7 +367,7 @@ paths:
         name: user
         required: true
         schema:
-          $ref: '#/definitions/models.UserDataResponse'
+          $ref: '#/definitions/models.UserGorm'
       produces:
       - application/json
       responses:
